tests/lean/unfold_crash.lean.expected.out
unfold_crash.lean:8:2: error: invalid 'begin-end' expression, ',' expected
